--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -296,6 +296,29 @@ p8 {
     margin-bottom: 79px;
     margin-top: 30px;
 }
+.preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 100000;
+    background-color: white;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.preloader img {
+    animation: spin 3s ease;
+    width: 150px;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(720deg);
+    }
+}
 @media only screen and (max-width: 600px) {
     .featured {
         margin-top: 5%;
